--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     font-family: 'Raleway', sans-serif;
     box-sizing: border-box;
@@ -9,7 +11,50 @@ body {
 }
 
 .banner {
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(49,168,221,.2),rgba(0,0,0,0.6)),
-    url(../images/banner.png);
+    background-image:
+        linear-gradient(
+            rgba(0,0,0,0.6),
+            rgba(49,168,221,.2),
+            rgba(0,0,0,0.6)),
+        url(../images/banner.png);
     border-bottom: 1px solid #33A8DB80;
+}
+
+.banner .banner-content button {
+    color: #33A8DB80;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    padding: 16px 32px;
+    background-color: transparent;
+    border-image: linear-gradient(#3BA1CD, #1572B7);
+    border-image-slice: 10;
+    border-radius: 30px;
+}
+
+p {
+    color: white;
+}
+
+section {
+    margin: 100px auto;
+}
+
+#transform-world {
+    height: 560px;
+    background-image: url(../images/woman-code.png);
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 200px;
+    border-top: 1px solid #33A8DB;
+    border-bottom: 1px solid #33A8DB;
+}
+
+#transform-world p {
+    max-width: 250px;
+    font-weight: 900;
+    font-size: 2.5rem;
+    text-transform: lowercase;
+    text-shadow: 4px 3px 2px #33A8DB;
 }
