--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,32 @@
     margin: 0;
 }
 
+/* COMMON TYPES */
+
 body {
     background-color: black;
 }
+
+h2 {
+    color: #33A8DB;
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+}
+
+p {
+    color: white;
+}
+
+section {
+    margin: 100px auto;
+}
+
+
+
+/* BANNER */
 
 .banner {
     background-image:
@@ -18,6 +41,11 @@ body {
             rgba(0,0,0,0.6)),
         url(../images/banner.png);
     border-bottom: 1px solid #33A8DB80;
+}
+
+.banner p {
+    font-size: 1.25rem;
+    margin: 16px 0 24px;
 }
 
 .banner .banner-content button {
@@ -33,13 +61,29 @@ body {
     border-radius: 30px;
 }
 
-p {
-    color: white;
+/* COURSE CONTENT */
+
+#course-content {
+    width: 800px;
+    text-align: center;
 }
 
-section {
-    margin: 100px auto;
+.modules-list {
+    margin: 24px 0;
 }
+
+#course-content .modules-list .module {
+    color: white;
+    width: 530px;
+    margin: 0 auto 24px;
+    border: 1px solid #33A8DB;
+    background-color: #252525;
+    padding: 16px;
+    border-radius: 100px;
+    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
+}
+
+/* TRANSFORM WORLD */
 
 #transform-world {
     height: 560px;
