--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,17 +29,25 @@ section {
     margin: 100px auto;
 }
 
-
+footer {
+    padding: 60px 0;
+    text-align: center;
+    border-top: 1px solid #33A8DB80;
+}
 
 /* BANNER */
 
 .banner {
+    height: 600px;
     background-image:
         linear-gradient(
             rgba(0,0,0,0.6),
             rgba(49,168,221,.2),
             rgba(0,0,0,0.6)),
         url(../images/banner.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-top: 60px;
     border-bottom: 1px solid #33A8DB80;
 }
 
@@ -48,8 +56,15 @@ section {
     margin: 16px 0 24px;
 }
 
+.banner .banner-content {
+    color: white;
+    width: 600px;
+    margin: auto;
+    text-align: center;
+}
+
 .banner .banner-content button {
-    color: #33A8DB80;
+    color: #31A8DD;
     font-size: 1rem;
     font-weight: bold;
     letter-spacing: 4px;
@@ -83,6 +98,10 @@ section {
     box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
 }
 
+#course-content .modules-list .module span {
+    color: #33A8DB;
+}
+
 /* TRANSFORM WORLD */
 
 #transform-world {
@@ -91,8 +110,8 @@ section {
     background-size: cover;
     background-attachment: fixed;
     padding: 200px;
-    border-top: 1px solid #33A8DB;
-    border-bottom: 1px solid #33A8DB;
+    border-top: 1px solid #33A8DB80;
+    border-bottom: 1px solid #33A8DB80;
 }
 
 #transform-world p {
@@ -101,4 +120,11 @@ section {
     font-size: 2.5rem;
     text-transform: lowercase;
     text-shadow: 4px 3px 2px #33A8DB;
+}
+
+/* PROFESSIONAL CHALLENGES */
+
+#professional-challenges {
+    text-align: center;
+    width: 800px;
 }
