--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,27 @@ section {
     margin: 100px auto;
 }
 
+/* FOOTER */
+
 footer {
     padding: 60px 0;
     text-align: center;
+    background-image:
+        linear-gradient(
+            rgba(50, 168, 219, .0),
+            rgba(50, 168, 219, .2)
+        );
     border-top: 1px solid #33A8DB80;
+}
+
+footer .dio-logo {
+    width: 300px;
+}
+
+footer a {
+    color: #33A8DB;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 /* BANNER */
@@ -43,7 +60,8 @@ footer {
         linear-gradient(
             rgba(0,0,0,0.6),
             rgba(49,168,221,.2),
-            rgba(0,0,0,0.6)),
+            rgba(0,0,0,0.6)
+        ),
         url(../images/banner.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -51,9 +69,30 @@ footer {
     border-bottom: 1px solid #33A8DB80;
 }
 
-.banner p {
-    font-size: 1.25rem;
-    margin: 16px 0 24px;
+.banner .logo {
+    background-color: rgba(0, 0, 0, .2);
+    height: 260px;
+    width: 260px;
+    margin: auto;
+    border-radius: 50%;
+    padding: 16px;
+    margin-bottom: 16px;
+}
+
+.banner h1 {
+    font-size: 2.5rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: transparent;
+    background: -webkit-linear-gradient(#33A8DB, #1472B7);
+    -webkit-background-clip: text;
+}
+
+.banner .logo img {
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .banner .banner-content {
@@ -61,6 +100,11 @@ footer {
     width: 600px;
     margin: auto;
     text-align: center;
+}
+
+.banner p {
+    font-size: 1.25rem;
+    margin: 16px 0 24px;
 }
 
 .banner .banner-content button {
@@ -127,4 +171,8 @@ footer {
 #professional-challenges {
     text-align: center;
     width: 800px;
+}
+
+#professional-challenges img {
+    margin: 32px 0;
 }
