--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ footer a {
     text-transform: uppercase;
     color: transparent;
     background: -webkit-linear-gradient(#33A8DB, #1472B7);
+    background-clip: text; /* compatibility */
     -webkit-background-clip: text;
 }
 
